--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 jdk:
   - oraclejdk8
   
- script:
-  - cp src\main\angular target\angular
+script:
+  - cp src/main/angular target/angular
