--- a/pom.xml
+++ b/pom.xml
@@ -42,29 +42,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-angular2-dir</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${basedir}\target\angular</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src\main\angular</directory>
-									<includes>
-										<include>**/*.*</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<artifactId>exec-maven-plugin</artifactId>
 				<groupId>org.codehaus.mojo</groupId>
 				<version>1.4.0</version>
@@ -100,7 +77,7 @@
 						</goals>
 						<phase>generate-resources</phase>
 						<configuration>
-							<executable>ng</executable>
+							<executable>${basedir}\target\angular\node_modules\@angular\cli\bin\ng</executable>
 							<arguments>
 								<argument>build</argument>
 
