heroku failed if src was moved

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ jdk:
   - oraclejdk8
   
 before_install:
-    - mkdir target
-    - mv src/main/angular target/angular
+    - cp -R src/main/angular/ target/angular/
     
 deploy:
   provider: heroku
