--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: java
 jdk:
   - oraclejdk8
   
-
+cache:
+    directories:
+        - target\angular\node_modules
     
 deploy:
   provider: heroku
