--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,27 @@
 logging:
+  file: app.log
+  path: /
   level:
     root: DEBUG
 
 management:
     security:
         enabled : false
-google:
-   api_key: AIzaSyB1qJ27jg8WVlNvMJlnrnMZandHi8fHArI
 
-security:
-  basic:
+
+zuul:
+    ignoredServices: '*'
+    routes:
+        auth-service-redirect:
+            path: /api/auth/**
+            sensitiveHeaders:
+            url: http://knallani-1:8090/auth/
+        auth-service:
+            path: /api/**
+            sensitiveHeaders:
+            url: http://knallani-1:8090/auth/
+    addHostHeader: true
+
+ribbon:
+  eureka:
     enabled: false
-  oauth2:
-    client:
-      clientId: 55635804291-3jra80gdoe38doclrihauin01c74h1pu.apps.googleusercontent.com
-      clientSecret: Ahu22O58fOQrGKGPzq9SDDTY
-      accessTokenUri: https://www.googleapis.com/oauth2/v4/token
-      userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
-      clientAuthenticationScheme: form
-      scope:
-        - openid
-        - email
-        - profile
-        - https://www.googleapis.com/auth/drive
-    resource:
-        userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
-        preferTokenInfo: false
