--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ management:
 zuul:
     ignoredServices: '*'
     routes:
+        auth-service-redirect:
+            path: /login
+            sensitiveHeaders:
+            url: https://grim-coffin-41549.herokuapp.com/login
         auth-service:
             path: /api/**
             sensitiveHeaders:
