--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			 <groupId>com.netflix.netflix-commons</groupId>
+			 <artifactId>netflix-commons-util</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
