--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,11 +15,14 @@ zuul:
     routes:
         auth-service-redirect:
             path: /login
+            sensitiveHeaders:
             url: https://grim-coffin-41549.herokuapp.com/login
         auth-service:
             path: /api/**
+            sensitiveHeaders:
             url: https://grim-coffin-41549.herokuapp.com/
-
+    addHostHeader: true
+    
 ribbon:
   eureka:
     enabled: false
