--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.springframework</groupId>
-	<artifactId>angularSpringBootWrapper</artifactId>
+	<artifactId>pdb-gateway</artifactId>
 	<version>0.1.0</version>
 
 	<parent>
