--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: configClient
+    name: pdb-gateway
   cloud:
     config:
       uri: https://bloodcurdling-web-94762.herokuapp.com
