--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
 
 # compiled output
 /dist
@@ -41,3 +53,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# log files
+*.log
+*.log.*
